# smear

./: .gitignore  Cargo.toml  Dockerfile  EXAMPLE.md  README.md
derive/: Cargo.toml  x.rs
derive/src/: arguments.rs  definitions.rs  directive.rs  directives.rs  lib.rs  long.rs  name.rs  utils.rs  value.rs
derive/src/arguments/: boolean.rs  field.rs  struct_.rs
derive/src/definitions/: enum_.rs
derive/src/directive/: argument.rs  field.rs
derive/src/directives/: boolean.rs
derive/src/utils/: aliases.rs  attributes.rs  default.rs  deprecated.rs  description.rs  directive.rs  long.rs  name.rs  optional.rs  path.rs  short.rs  ty.rs
derive/src/value/: map.rs  object.rs  set.rs
smear/: Cargo.toml  README.md  x.rs
smear-graphql/: Cargo.toml
smear-graphql/benches/: directive_args.rs  github_schema.rs  inline_fragment.rs  kitchen_sink.rs  minimal.rs  query.rs  query_vars.rs  supergraph.rs
smear-graphql/src/: arguments.rs  ast.rs  cst.rs  directives.rs  error.rs  field.rs  lexer.rs  lib.rs  parser.rs  value.rs
smear-graphql/src/error/: lexer.rs  parser.rs
smear-graphql/src/lexer/: ast.rs  cst.rs  error.rs  float.rs  full_token.rs  handlers.rs  number.rs  string_lexer.rs  string_token.rs  tests.rs  token.rs
smear-graphql/src/parser/: argument.rs  ast.rs  boolean_value.rs  directives.rs  enum_value.rs  error.rs  fast.rs  field.rs  float.rs  fragment.rs  impls.rs  int.rs  list.rs  lossless.rs  name.rs  null.rs  object.rs  punctuator.rs  selection_set.rs  string.rs  value.rs  variable.rs
smear-graphql/tests/: _0001_input_type_definition_without_input_values.rs  _0002_selection_simple.rs  _0003_selection_with_fields.rs  _0004_selection_with_fields_aliases_arguments.rs  _0005_selection_with_inline_fragment.rs  _0006_selection_with_fragment_spread.rs  _0007_directive_definition.rs  _0008_directive_definition_with_arguments.rs  ok_0001_input_type_definition_without_input_values.rs  ok_0002_selection_simple.rs  ok_0003_selection_with_fields.rs  ok_0004_selection_with_fields_aliases_arguments.rs  ok_0005_selection_with_inline_fragment.rs  ok_0006_selection_with_fragment_spread.rs  ok_0007_directive_definition.rs  ok_0008_directive_definition_with_arguments.rs  ok_0009_directive_definition_repeatable.rs  ok_0010_enum_type_definition.rs  ok_0011_enum_type_extension.rs  ok_0012_fragment_definition.rs  ok_0013_fragment_definition_with_fragment_spread.rs  ok_0014_input_definition.rs  ok_0015_input_extension.rs  ok_0016_interface_definition.rs  ok_0017_interface_extension.rs  ok_0018_object_type_definition.rs  ok_0019_object_type_extension.rs  ok_0020_operation_type_definition.rs  ok_0021_operation_type_definition_with_arguments.rs  ok_0022_operation_type_definition_with_arguments_and_directives.rs  ok_0023_scalar_definition.rs  ok_0024_scalar_extension.rs  ok_0025_schema_definition.rs  ok_0026_schema_extension.rs  ok_0027_union_type_definition.rs  ok_0028_union_type_definition_followed_by_object_definition.rs  ok_0029_union_type_extension.rs  ok_0030_values.rs  ok_0031_variables_with_default.rs  ok_0032_supergraph.rs  (+15 more)
smear-graphql/tests/parser/: err.rs  ok.rs
smear-lexer/: Cargo.toml  README.md
smear-lexer/src/: error.rs  graphqlx.rs  handlers.rs  hints.rs  keywords.rs  lib.rs  punctuator.rs  string_lexer.rs
smear-lexer/src/error/: string.rs  traits.rs
smear-lexer/src/graphql/: error.rs  handlers.rs  lossless.rs  syntactic.rs  tests.rs
smear-lexer/src/graphqlx/: ast.rs  error.rs  handlers.rs  lossless.rs
smear-lexer/src/string_lexer/: block.rs  inline.rs
smear-parser/: Cargo.toml  README.md
smear-parser/src/: char.rs  convert.rs  definitions.rs  digits.rs  error.rs  graphql.rs  hints.rs  ident.rs  keywords.rs  lang.rs  language.rs  lexer.rs  lib.rs  name.rs  parse.rs  parser.rs  source.rs  spanned.rs  tests.rs  tokenizer.rs  utils.rs  value.rs
smear-parser/src/definitions/: arguments_definition.rs  ast.rs  described.rs  directives_definition.rs  enum_definition.rs  executable_definition.rs  fields_definition.rs  fields_definition2.rs  fragment_definition.rs  input_fields_definition.rs  input_fields_definition2.rs  input_object_definition.rs  input_value_definition.rs  interface_definition.rs  minized.rs  object_definition.rs  operation_definition.rs  operation_type.rs  operation_type_definition.rs  scalar_definition.rs  schema_definition.rs  ty.rs  ty2.rs  union_definition.rs  v2.rs  variable_definition.rs
smear-parser/src/graphql/: arguments.rs  ast.rs  directives.rs  error.rs  field.rs  value.rs
smear-parser/src/graphqlx/: ast.rs  error.rs
smear-parser/src/lang/: argument.rs  arguments.rs  arguments2.rs  digits.rs  directives.rs  directives2.rs  field.rs  field2.rs  fragment.rs  fragment2.rs  ignored.rs  input_value.rs  input_value2.rs  keywords.rs  keywords2.rs  minized.rs  name.rs  name2.rs  punct.rs  punctuator.rs  selection_set.rs  selection_set2.rs
smear-parser/src/language/: arguments.rs  directives.rs  field.rs  fragment.rs  ignored.rs  input_value.rs  punct.rs  selection_set.rs
smear-parser/src/lexer/: error.rs  span.rs  state.rs
smear-parser/src/parser/: definitions.rs  ignored.rs  input_value.rs  keywords.rs  language.rs  name.rs  operation_type.rs  punct.rs  span.rs
smear-parser/src/value/: boolean_value.rs  float.rs  int.rs  null_value.rs  string.rs  variable.rs
smear-scaffold/: Cargo.toml  README.md
smear-scaffold/src/: ast.rs  cst.rs  cst.rs.bk  error.rs  error_traits.rs  hints.rs  lib.rs
smear-utils/: Cargo.toml
smear-utils/src/: convert.rs  lexer.rs  lib.rs  with_source.rs
smear/benches/: directive_args.rs  executables.rs  github_schema.rs  inline_fragment.rs  kitchen_sink.rs  minimal.rs  query.rs  query_vars.rs  schemas.rs  supergraph.rs  utils.rs
smear/examples/: thegraph.rs
smear/src/: argument.rs  db.rs  diagnostics.rs  directive.rs  error.rs  hints.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  punctuator.rs  scaffold.rs  utils.rs  value.rs
smear/tests/: boolean_directive.rs  directive.rs  map.rs  parser.rs  set.rs
types/: Cargo.toml
types/src/: definition.rs  directive.rs  error.rs  lib.rs  value.rs
(+1132 files in other folders)
