[workspace]
members = [
  "smear",
  "smear-graphql",
  "smear-parser",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/smear"
homepage = "https://github.com/al8n/smear"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
smear-graphql = { path = "smear-graphql", default-features = false }
smear-parser = { path = "smear-parser", default-features = false }

