[workspace]
members = [
  "smear",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
repository = "https://github.com/al8n/smear"
homepage = "https://github.com/al8n/smear"
license = "Apache-2.0 OR MIT"
rust-version = "1.89"

[workspace.dependencies]
bstr = { version = "1", default-features = false }
bytes = { version = "1", default-features = false }
chumsky = { version = "0.11", default-features = false }
derive_more = { version = "2", default-features = false, features = ["unwrap", "is_variant", "try_unwrap", "from", "into", "deref", "deref_mut", "as_ref", "display"] }
logosky = { version = "0.1", default-features = false }

paste = "1"
thiserror = { version = "2", default-features = false }

