[package]
name = "smear-derive"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "A placeholder"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
heck = "0.4"
indexmap = "2"
proc-macro2 = "1"
prettyplease = "0.2"
quote = "1"
syn = "2"
