[package]
name = "smear-derive"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "A placeholder"

[lib]
proc-macro = true

[features]
default = ["smear-types/derive"]
indexmap = ["smear-types/indexmap"]

[dependencies]
darling = { version = "0.20", features = ["diagnostics"] }
heck = "0.4"
indexmap = "2"
proc-macro2 = "1"
prettyplease = "0.2"
quote = "1"
syn = { workspace = true }

smear-types = { path = "../types", default-features = false, features = ["derive"] }
