[package]
name = "smear-graphql"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["std"]
alloc = ["smear-parser/alloc"]
std = ["smear-parser/std"]

bytes = ["smear-parser/bytes"]

[dependencies]
chumsky.workspace = true
derive_more.workspace = true
smear-parser.workspace = true

[dev-dependencies]
criterion = "0.7"
apollo-parser = "0.8"

[[bench]]
name = "query"
path = "benches/query.rs"
harness = false

[[bench]]
name = "supergraph"
path = "benches/supergraph.rs"
harness = false