[package]
name = "smear-graphql"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["std"]
alloc = ["smear-parser/alloc"]
std = ["smear-parser/std"]

bytes = ["smear-parser/bytes"]

[dependencies]
chumsky.workspace = true
derive_more.workspace = true
smear-parser.workspace = true

[dev-dependencies]
criterion = "0.7"
apollo-parser = "0.8"
graphql-parser = "0.4"
async-graphql-parser = "7"

[[bench]]
name = "directive_args"
path = "benches/directive_args.rs"
harness = false

[[bench]]
name = "github"
path = "benches/github_schema.rs"
harness = false

[[bench]]
name = "inline_fragment"
path = "benches/inline_fragment.rs"
harness = false

[[bench]]
name = "kitchen_sink"
path = "benches/kitchen_sink.rs"
harness = false

[[bench]]
name = "minimal"
path = "benches/minimal.rs"
harness = false

[[bench]]
name = "query_vars"
path = "benches/query_vars.rs"
harness = false

[[bench]]
name = "query"
path = "benches/query.rs"
harness = false

[[bench]]
name = "supergraph"
path = "benches/supergraph.rs"
harness = false
