[package]
name = "smear-graphql"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["std"]
alloc = ["smear-parser/alloc"]
std = ["smear-parser/default", "thiserror/default", "either/default"]

bytes = ["dep:bytes", "smear-parser/bytes", "logosky/bytes"]
bstr = ["dep:bstr", "smear-parser/bstr", "logosky/bstr"]
smallvec = ["dep:smallvec"]

[dependencies]
chumsky.workspace = true
derive_more.workspace = true
either = { version = "1", default-features = false }
logosky.workspace = true
logos = { version = "0.15", default-features = false, features = ["export_derive"] }
smear-parser.workspace = true
thiserror.workspace = true

smallvec = { version = "1", default-features = false, features = ["const_new"], optional = true }
bytes = { workspace = true, optional = true }
bstr = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.7"
apollo-parser = "0.8"
graphql-parser = "0.4"
async-graphql-parser = "7"
cynic-parser = "0.10"
paste = "1"

[[bench]]
name = "directive_args"
path = "benches/directive_args.rs"
harness = false

[[bench]]
name = "github"
path = "benches/github_schema.rs"
harness = false

[[bench]]
name = "inline_fragment"
path = "benches/inline_fragment.rs"
harness = false

[[bench]]
name = "kitchen_sink"
path = "benches/kitchen_sink.rs"
harness = false

[[bench]]
name = "minimal"
path = "benches/minimal.rs"
harness = false

[[bench]]
name = "query_vars"
path = "benches/query_vars.rs"
harness = false

[[bench]]
name = "query"
path = "benches/query.rs"
harness = false

[[bench]]
name = "supergraph"
path = "benches/supergraph.rs"
harness = false
