[package]
name = "smear-parser"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["std"]
alloc = []
std = ["thiserror/default", "logosky/default"]

bytes = ["dep:bytes", "logosky/bytes"]
bstr = ["dep:bstr", "logosky/bstr"]


[dependencies]
derive_more.workspace = true
either = { version = "1", default-features = false }
paste = "1"
thiserror.workspace = true
logosky.workspace = true

bytes = { version = "1", default-features = false, optional = true }
bstr = { workspace = true, optional = true }
