[package]
name = "smear-utils"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["std"]
alloc = []
std = ["chumsky/default"]

bytes = ["chumsky/bytes", "dep:bytes"]

[dependencies]
chumsky.workspace = true

bytes = { version = "1", default-features = false, optional = true }
