[package]
name = "smear-utils"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["std"]
alloc = []
std = ["chumsky/default", "thiserror/default"]

bytes = ["chumsky/bytes", "dep:bytes"]

[dependencies]
ascii = { version = "1", default-features = false }
chumsky.workspace = true
derive_more.workspace = true

bytes = { version = "1", default-features = false, optional = true }
bstr = { workspace = true, optional = true }
thiserror.workspace = true