[package]
name = "smear"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "Blazing fast, fully spec-compliant, reusable parser combinators for standard GraphQL and GraphQL-like DSLs."

[features]
default = ["std", "smallvec", "graphql", "graphqlx"]
alloc = ["smear-lexer/alloc", "smear-scaffold/alloc", "smear-parser/alloc"]
std = ["thiserror/default", "either/default", "bytes?/default", "bstr?/default", "hipstr?/default", "smear-lexer/std", "smear-scaffold/std", "smear-parser/std"]

unstable = ["smear-lexer/unstable", "smear-parser/unstable"]

cst = ["std", "rowan"]
graphql = ["smear-lexer/graphql", "smear-parser/graphql"]
graphqlx = ["unstable", "smear-lexer/graphqlx", "smear-parser/graphqlx"]

bytes = ["dep:bytes", "logosky/bytes", "smear-lexer/bytes", "smear-parser/bytes"]
bstr = ["dep:bstr", "logosky/bstr", "smear-lexer/bstr", "smear-parser/bstr"]
hipstr = ["dep:hipstr", "logosky/hipstr", "smear-lexer/hipstr", "smear-parser/hipstr"]
smallvec = ["dep:smallvec", "smear-lexer/smallvec", "smear-parser/smallvec"]

[dependencies]
derive_more.workspace = true
either = { version = "1", default-features = false }
paste = "1"
thiserror.workspace = true
logosky = { workspace = true, features = ["either"] }
smear-lexer.workspace = true
smear-scaffold.workspace = true
smear-parser.workspace = true

rowan = { version = "0.16", optional = true }
smallvec = { version = "1", default-features = false, features = ["const_new"], optional = true }
hipstr = { version = "0.8", default-features = false, optional = true }
bytes = { workspace = true, optional = true }
bstr = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.7"
apollo-parser = "0.8"
graphql-parser = "0.4"
async-graphql-parser = "7"
cynic-parser = "0.10"
paste = "1"


# Schema benchmarks
[[bench]]
name = "simple_object"
path = "benches/schemas/simple_object.rs"
harness = false

[[bench]]
name = "apollo_studio"
path = "benches/schemas/apollo_studio.rs"
harness = false

[[bench]]
name = "github_schema"
path = "benches/schemas/github_schema.rs"
harness = false

[[bench]]
name = "gitlab_schema"
path = "benches/schemas/gitlab_schema.rs"
harness = false

[[bench]]
name = "kitchen_sink_canonical_schema"
path = "benches/schemas/kitchen_sink_canonical.rs"
harness = false

[[bench]]
name = "kitchen_sink_schema"
path = "benches/schemas/kitchen_sink.rs"
harness = false

[[bench]]
name = "schema_kitchen_sink"
path = "benches/schemas/schema_kitchen_sink.rs"
harness = false

[[bench]]
name = "supergraph"
path = "benches/schemas/supergraph.rs"
harness = false

[[bench]]
name = "minimal_schema"
path = "benches/schemas/minimal.rs"
harness = false

[[bench]]
name = "nft_schema"
path = "benches/schemas/nft.rs"
harness = false

[[bench]]
name = "uniswap_v2_schema"
path = "benches/schemas/uniswap_v2_schema.rs"
harness = false

[[bench]]
name = "lido_schema"
path = "benches/schemas/lido_schema.rs"
harness = false

[[bench]]
name = "schema_yield"
path = "benches/schemas/schema_yield.rs"
harness = false

[[bench]]
name = "curve_finance_schema"
path = "benches/schemas/curve_finance_schema.rs"
harness = false

[[bench]]
name = "liquity_schema"
path = "benches/schemas/liquity_schema.rs"
harness = false

[[bench]]
name = "makerdao_schema"
path = "benches/schemas/makerdao_schema.rs"
harness = false

[[bench]]
name = "schema_lending"
path = "benches/schemas/schema_lending.rs"
harness = false

[[bench]]
name = "gmx_schema"
path = "benches/schemas/gmx_schema.rs"
harness = false

# Executable benchmarks
# Representative benchmark queries (tiny to huge, simple to complex)
[[bench]]
name = "bench_01_tiny_simple"
path = "benches/executables/bench_01_tiny_simple.rs"
harness = false

[[bench]]
name = "bench_02_small_simple"
path = "benches/executables/bench_02_small_simple.rs"
harness = false

[[bench]]
name = "bench_03_small_variables"
path = "benches/executables/bench_03_small_variables.rs"
harness = false

[[bench]]
name = "bench_04_medium_nested"
path = "benches/executables/bench_04_medium_nested.rs"
harness = false

[[bench]]
name = "bench_05_medium_fragments"
path = "benches/executables/bench_05_medium_fragments.rs"
harness = false

[[bench]]
name = "bench_06_large_complex"
path = "benches/executables/bench_06_large_complex.rs"
harness = false

[[bench]]
name = "bench_07_large_deep_nesting"
path = "benches/executables/bench_07_large_deep_nesting.rs"
harness = false

[[bench]]
name = "bench_08_many_fields"
path = "benches/executables/bench_08_many_fields.rs"
harness = false

[[bench]]
name = "bench_09_many_aliases"
path = "benches/executables/bench_09_many_aliases.rs"
harness = false

[[bench]]
name = "bench_10_huge_comprehensive"
path = "benches/executables/bench_10_huge_comprehensive.rs"
harness = false
