[package]
name = "smear-types"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = []
derive = ["darling", "syn", "quote", "proc-macro2"]

bigint = ["dep:num-bigint"]
bigdecimal = ["dep:bigdecimal"]
chrono = ["dep:chrono"]
decimal = ["dep:rust_decimal"]
humantime = ["dep:humantime"]
indexmap = ["dep:indexmap"]
url = ["dep:url"]
uuid = ["dep:uuid"]

[dependencies]
apollo-parser = { workspace = true }
codespan-reporting = { workspace = true }

paste = "1"
rowan = { workspace = true }
strsim = { workspace = true }
viewit = { workspace = true }

# optional dependencies
num-bigint = { version = "0.4", optional = true }
bigdecimal = { version = "0.4", optional = true }
rust_decimal = { version = "1.32", optional = true }

humantime = { version = "2.1", optional = true }
chrono = { version = "0.4", optional = true }

indexmap = { version = "2", optional = true }
url = { version = "2.4", optional = true }
uuid = { version = "1.4", optional = true }

# derive
darling = { version = "0.20", optional = true }
syn = { version = "2", optional = true }
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }
